--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 
 <body>
+  <script language="javascript">
+  var name=window.prompt("What's your name ?");
+  window.alert("Your name is" + name);
+  </script>
 
 </body>
 </html>
