--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 <body>
   <script language="javascript">
   var name=window.prompt("What's your name ?");
-  window.alert("Your name is" + name);
+  window.alert("Your name is " + name);
+  var quest=window.prompt("What is your quest ?");
+  if (quest=="to seek for the holy grail") {
+    window.alert("Good");
+  }
+  else {
+    window.alert("Arrrgh");
+  }
   </script>
 
 </body>
