--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ else if (age>30) {
 else {
   window.alert("Bienvenue dans la trentaine");
 }
-
+window.alert("You have a X0 birthday in "+(10-(age%10))+" years");
   </script>
 
 </body>
